@@ -8,6 +8,7 @@
 * Refactor cli specs
 * Add -x to download to extract heirloom to given output path
 * Verify -o specified in download is a directory
+* Requiring -d for builds (will no longer default to .)
 
 ## v0.4.0:
 
